# library-mcp-server

./: LICENSE  README.md  __main__.py  pyproject.toml  requirements.txt
src/: __init__.py  server.py
